[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PRISM"
version = "0.1.0"
description = "PRISM Services"
requires-python = ">=3.10"
authors = [
    { name = "Ricardo Baeza" }
]

packages = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "src/tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "auth: authentication related tests",
]

# Add this section to help pytest find your packages
[tool.pytest]
pythonpath = "src"